--- a/Amozegar/Areas/Shared/Views/Homeworks/Details.cshtml
+++ b/Amozegar/Areas/Shared/Views/Homeworks/Details.cshtml
@@ -8,7 +8,7 @@
 
 
 
-        <div class="d-flex gap-3 align-items-center mb-4">
+        <div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
             <h3 class="card-title mb-0">تکلیف‌</h3>
             <div>
                 <a asp-action="Index"
