--- a/Amozegar/Areas/Panel/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Panel/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Amozegar.Models
 @using Amozegar.Areas.Panel.Models
 @using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.EntityFrameworkCore
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
