--- a/Amozegar/Areas/Shared/Views/Homeworks/Index.cshtml
+++ b/Amozegar/Areas/Shared/Views/Homeworks/Index.cshtml
@@ -8,10 +8,10 @@
 	<div class="card-body p-4">
 
 
-		<div class="d-flex gap-3 align-items-center mb-4">
+		<div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
 
 			<h3 class="card-title mb-0">تکالیف‌</h3>
-			@if (ViewBag.IsTeacher)
+			@if (ViewBag.IsTeacher != null && ViewBag.IsTeacher == true)
 			{
 				<div>
 					<a asp-action="AddHomework"
@@ -67,9 +67,11 @@
 			}
 			else
 			{
+
 				<div class="alert alert-light">
-					تعداد کل تکالیف : @ViewBag.HomeworksCount
+					تعداد کل تکالیف : @ViewBag.Count
 				</div>
+				<div asp-validation-summary="All" class="text-danger"></div>
 				foreach (var homework in Model)
 				{
 					<div class="notification-item">
@@ -88,7 +90,6 @@
 							</div>
 						</a>
 
-
 						<div class="notification-actions">
 
 							@if (ViewBag.IsTeacher)
@@ -102,29 +103,23 @@
 									<i class="fas fa-edit me-1"></i>
 									ویرایش
 								</a>
-								<a asp-action="CloseHomework"
-								   asp-controller="Homeworks"
-								   asp-route-classId="@ViewBag.ClassId"
-								   asp-route-homeworkId="@homework.HomeworkId"
-								   asp-area="Teacher"
+
+								<a href="javascript:void(0)"
+								   onclick="openConfirmModal('@Url.Action("CloseHomework", "Homeworks", new { classId = ViewBag.ClassId, homeworkId = homework.HomeworkId, area = "Teacher" })', 'آیا از بستن تکلیف اطمینان دارید؟')"
 								   class="btn btn-outline-warning btn-sm">
 									<i class="fa-solid fa-lock me-1"></i>
 									بستن
 								</a>
-								<a asp-action="OpenHomework"
-								   asp-controller="Homeworks"
-								   asp-route-classId="@ViewBag.ClassId"
-								   asp-route-homeworkId="@homework.HomeworkId"
-								   asp-area="Teacher"
+
+								<a href="javascript:void(0)"
+								   onclick="openConfirmModal('@Url.Action("OpenHomework", "Homeworks", new { classId = ViewBag.ClassId, homeworkId = homework.HomeworkId, area = "Teacher" })', 'آیا از باز کردن تکلیف اطمینان دارید؟', 'acceptMode')"
 								   class="btn btn-outline-success btn-sm">
 									<i class="fa-solid fa-lock-open me-1"></i>
 									باز کردن
 								</a>
-								<a asp-action="DeleteHomework"
-								   asp-controller="Homeworks"
-								   asp-route-classId="@ViewBag.ClassId"
-								   asp-route-homeworkId="@homework.HomeworkId"
-								   asp-area="Teacher"
+
+								<a href="javascript:void(0)"
+								   onclick="openConfirmModal('@Url.Action("DeleteHomework", "Homeworks", new { classId = ViewBag.ClassId, homeworkId = homework.HomeworkId, area = "Teacher" })', 'آیا از حذف تکلیف اطمینان دارید؟')"
 								   class="btn btn-outline-danger btn-sm">
 									<i class="fas fa-trash me-1"></i>
 									حذف
