--- a/Amozegar/Areas/Shared/Views/Notifications/Index.cshtml
+++ b/Amozegar/Areas/Shared/Views/Notifications/Index.cshtml
@@ -9,7 +9,7 @@
 
 
 
-        <div class="d-flex gap-3 align-items-center mb-4">
+        <div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
             <h3 class="card-title mb-0">اعلان‌</h3>
 
             <div>
