--- a/Amozegar/Areas/Shared/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Shared/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Amozegar.Models
 @using Amozegar.Areas.Shared.Models
 @using Amozegar.Areas.Teacher.Models
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
