--- a/Amozegar/Areas/Teacher/Views/Classes/EditClass.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Classes/EditClass.cshtml
@@ -56,12 +56,21 @@
 			</div>
 
 			<div class="mb-3">
-				<label asp-for="@Model.ConfirmPassword" class="form-label"></label>
+				<label asp-for="@Model.NewPassword" class="form-label"></label>
 				<div class="input-group">
 					<span class="input-group-text"></span>
-					<input class="form-control" asp-for="@Model.ConfirmPassword">
+					<input class="form-control" asp-for="@Model.NewPassword">
 				</div>
-				<span asp-validation-for="@Model.ConfirmPassword" class="small text-danger"></span>
+				<span asp-validation-for="@Model.NewPassword" class="small text-danger"></span>
+			</div>
+
+			<div class="mb-3">
+				<label asp-for="@Model.ConfirmNewPassword" class="form-label"></label>
+				<div class="input-group">
+					<span class="input-group-text"></span>
+					<input class="form-control" asp-for="@Model.ConfirmNewPassword">
+				</div>
+				<span asp-validation-for="@Model.ConfirmNewPassword" class="small text-danger"></span>
 			</div>
 
 
