--- a/Amozegar/Areas/Teacher/Views/Home/Notifications.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Home/Notifications.cshtml
@@ -7,7 +7,7 @@
     <div class="card-body p-4">
 
 
-        <div class="d-flex gap-3 align-items-center mb-4">
+        <div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
             
             <h3 class="card-title mb-0">اعلان‌ها</h3>
             <div>
@@ -91,14 +91,15 @@
                                  <i class="fas fa-edit me-1"></i> 
                                  ویرایش 
                              </a>
-                            <a asp-action="DeleteNotification"
-                               asp-controller="Notifications"
-                               asp-route-classId="@ViewBag.ClassId"
-                               asp-route-notificationId="@notification.NotificationId"
-                                 class="btn btn-outline-danger btn-sm"> 
-                                 <i class="fas fa-trash me-1"></i> 
-                                 حذف 
-                             </a>
+
+                            <a href="javascript:void(0)"
+                               onclick="openConfirmModal('@Url.Action("DeleteNotification", "Notifications", new { classId = ViewBag.ClassId, notificationId = notification.NotificationId, area = "Teacher" })', 'آیا از حذف اطمینان دارید؟')"
+                               class="btn btn-outline-danger btn-sm">
+                                <i class="fas fa-trash me-1"></i>
+                                حذف
+                            </a>
+
+
                          </div> 
                      </div> 
 
