--- a/Amozegar/Areas/Teacher/Views/Homeworks/CheckHomeworkSent.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Homeworks/CheckHomeworkSent.cshtml
@@ -2,13 +2,12 @@
 @{
     ViewData["Title"] = "بررسی کردن تکلیف انجام شده";
 }
-
 <div class="card border-0 shadow-sm">
     <div class="card-body p-4">
 
 
 
-        <div class="d-flex gap-3 align-items-center mb-4">
+        <div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
             <h3 class="card-title mb-0">تکلیف انجام شده‌</h3>
             <div>
                 <a asp-action="HomeworksSent"
@@ -61,24 +60,22 @@
                 </div>
 
                 <div class="notification-actions my-2 py-2">
-                    <a asp-action="AcceptSentHomework"
-                       asp-controller="Homeworks"
-                       asp-route-classId="@ViewBag.ClassId"
-                       asp-route-studentToHomeworkId="@Model.StudentToHomeworkId"
-                       asp-area="Teacher"
+
+
+                    <a href="javascript:void(0)"
+                       onclick="openConfirmModal('@Url.Action("AcceptSentHomework", "Homeworks", new { classId = ViewBag.ClassId, studentToHomeworkId = Model.StudentToHomeworkId, area = "Teacher" })', 'آیا از قبول کردن تکلیف اطمینان دارید؟', 'acceptMode')"
                        class="btn btn-success btn-sm">
                         <i class="fa-solid fa-check me-1"></i>
                         قبول کردن
                     </a>
-                    <a asp-action="RejectSentHomework"
-                       asp-controller="Homeworks"
-                       asp-route-classId="@ViewBag.ClassId"
-                       asp-route-studentToHomeworkId="@Model.StudentToHomeworkId"
-                       asp-area="Teacher"
+
+                    <a href="javascript:void(0)"
+                       onclick="openConfirmModal('@Url.Action("RejectSentHomework", "Homeworks", new { classId = ViewBag.ClassId, studentToHomeworkId = Model.StudentToHomeworkId, area = "Teacher" })', 'آیا از رد کردن تکلیف اطمینان دارید؟')"
                        class="btn btn-danger btn-sm">
                         <i class="fa-solid fa-xmark me-1"></i>
                         رد کردن
                     </a>
+
                 </div>
 
             </div>
