--- a/Amozegar/Areas/Teacher/Views/Homeworks/HomeworksSent.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Homeworks/HomeworksSent.cshtml
@@ -18,7 +18,7 @@ else
 	<div class="card border-0 shadow-sm">
 		<div class="card-body p-4">
 
-			<div class="d-flex gap-3 align-items-center mb-4">
+			<div class="d-flex gap-3 align-items-center mb-4 flex-wrap">
 
 				<h3 class="card-title mb-0">لیست دانش آموزان</h3>
 
