--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -1,94 +1,49 @@
-﻿<!DOCTYPE html>
+﻿@{
+    ViewData["RoleName"] = "Teacher";
+    Layout = "~/Areas/Shared/Views/Shared/_MainLayout.cshtml";
+}
 
-<html dir="rtl">
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - آموزگار</title>
-	<script type="importmap"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/Amozegar.styles.css" asp-append-version="true" />
-</head>
-<body>
+@section Sidebar
+{
+    <a class="menu-item" asp-action="Index" asp-controller="Home" asp-area="">
+        <i class="fas fa-home"></i>
+        <span>برگشت به خانه</span>
+    </a>
+    <a asp-action="Index" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" class="menu-item @(ViewBag.Route == "Dashboard" ? "active" : "")">
+        <i class="fas fa-tachometer-alt"></i>
+        <span>داشبورد</span>
+    </a>
+    <a asp-action="LoginsToClass" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "LoginsToClass" ? "active" : "")">
+        <i class="fa-solid fa-book-tanakh"></i>
+        <span>درخواست های ورود @await Component.InvokeAsync("NotRead", new { type = "Students", classIdentity = ViewBag.ClassId })</span>
+    </a>
+    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Class-Students-List" ? "active" : "")">
+        <i class="fa-solid fa-users"></i>
+        <span>لیست دانش آموزان</span>
+    </a>
+    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Banned-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Banned-Students-List" ? "active" : "")">
+        <i class="fa-solid fa-users-slash"></i>
+        <span>لیست دانش آموزان مسدود شده</span>
+    </a>
+    <a asp-action="Notifications" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ControlNotifications" ? "active" : "")">
+        <i class="fa-solid fa-message"></i>
+        <span>کنترل اعلانات</span>
+    </a>
+    <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Notifications" ? "active" : "")">
+        <i class="fa-solid fa-message"></i>
+        <span>اعلانات @await Component.InvokeAsync("NotRead", new { type = "Notifications", classIdentity = ViewBag.ClassId })</span>
+    </a>
+    <a asp-action="Index" asp-controller="Homeworks" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Homeworks" ? "active" : "")">
+        <i class="fa-solid fa-pen"></i>
+        <span>تکالیف</span>
+    </a>
+    <a asp-action="HomeworksSent" asp-controller="Homeworks" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "HomeworksSent" ? "active" : "")">
+        <i class="fa-solid fa-pen-to-square"></i>
+        <span>تکالیف انجام شده @await Component.InvokeAsync("NotRead", new { type = "HomeworksSent", classIdentity = ViewBag.ClassId })</span>
+    </a>
+}
 
-	@await Component.InvokeAsync("MobileNavigationComponent")
-
-    <div class="panel-container">
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="sidebar-header">
-                <a asp-action="Index" asp-controller="Home" asp-area="" class="sidebar-logo d-flex justify-content-center align-items-center gap-1">
-                    <img src="~/images/home/logo.png" alt="آموزگار">
-                    آموزگار
-                </a>
-            </div>
-
-            <div class="sidebar-menu">
-                <nav>
-                    <a class="menu-item" asp-action="Index" asp-controller="Home" asp-area="">
-                        <i class="fas fa-home"></i>
-                        <span>برگشت به خانه</span>
-                    </a>
-                    <a asp-action="Index" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" class="menu-item @(ViewBag.Route == "Dashboard" ? "active" : "")">
-                        <i class="fas fa-tachometer-alt"></i>
-                        <span>داشبورد</span>
-                    </a>
-                    <a asp-action="LoginsToClass" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "LoginsToClass" ? "active" : "")">
-                        <i class="fa-solid fa-book-tanakh"></i>
-                        <span>درخواست های ورود @await Component.InvokeAsync("NotReadComponent", new { type = "Students", classIdentity = ViewBag.ClassId })</span>
-                    </a>
-                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Class-Students-List" ? "active" : "")">
-                        <i class="fa-solid fa-users"></i>
-                        <span>لیست دانش آموزان</span>
-                    </a>
-                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Banned-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Banned-Students-List" ? "active" : "")">
-                        <i class="fa-solid fa-users-slash"></i>
-                        <span>لیست دانش آموزان مسدود شده</span>
-                    </a>
-                    <a asp-action="Notifications" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ControlNotifications" ? "active" : "")">
-                        <i class="fa-solid fa-message"></i>
-                        <span>کنترل اعلانات</span>
-                    </a>
-                    <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Notifications" ? "active" : "")">
-                        <i class="fa-solid fa-message"></i>
-                        <span>اعلانات @await Component.InvokeAsync("NotReadComponent", new { type = "Notifications", classIdentity = ViewBag.ClassId })</span>
-                    </a>
-                    <a asp-action="Index" asp-controller="Homeworks" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Homeworks" ? "active" : "")">
-                        <i class="fa-solid fa-pen"></i>
-                        <span>تکالیف</span>
-                    </a>
-                    <a asp-action="HomeworksSent" asp-controller="Homeworks" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "HomeworksSent" ? "active" : "")">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                        <span>تکالیف انجام شده @await Component.InvokeAsync("NotReadComponent", new { type = "HomeworksSent", classIdentity = ViewBag.ClassId })</span>
-                    </a>
-
-                </nav>
-            </div>
-
-            <div class="sidebar-footer">
-                <a class="menu-item text-danger" asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Teacher" asp-route-pageNumber="1">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span>خروج از کلاس</span>
-                </a>
-            </div>
-        </aside>
-
-        <!-- Main Content -->
-        <main class="main-content">
-            <div class="container-fluid py-4">
-
-                <partial name="~/Areas/Shared/PartialViews/_ClassDetails.cshtml" model="@ViewBag.classId" />
-
-                @RenderBody()
-            </div>
-        </main>
-    </div>
-
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-	@await RenderSectionAsync("Scripts", required: false)
-</body>
-</html>
+@RenderBody()
+@section MyScripts {
+    @await RenderSectionAsync("Scripts", required: false)
+}
