--- a/Amozegar/wwwroot/css/site.css
+++ b/Amozegar/wwwroot/css/site.css
@@ -418,6 +418,7 @@ body {
     flex: 1;
     margin-right: var(--sidebar-width);
     padding-top: 1rem;
+    max-width: 100vw;
 }
 
 
@@ -630,6 +631,7 @@ body {
 .notification-actions {
     display: flex;
     gap: 0.5rem;
+    flex-wrap: wrap;
 }
 
 
