--- a/Amozegar/Views/Home/Index.cshtml
+++ b/Amozegar/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
 </section>
 
 <!-- Stats Section -->
+<h3 class="text-red-200">Hello</h3>
 <section class="stats-section">
     <div class="container">
         <div class="row text-center">
